# hbase-thrift-rs

./: Cargo.toml  README.md  dprint.json
examples/: create_table.rs  delete_table.rs  pool.rs  put.rs  simple.rs
src/: client.rs  error.rs  hbase.rs  lib.rs  scan.rs  table.rs
