[package]
name = "hbase-thrift"
version = "0.7.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/midnightexigent/hbase-thrift-rs"
description = "A client for HBase's Thrift Interface"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
easy-ext = "1.0.0"
thiserror = "1.0.30"
thrift = "0.15.0"
thrift-pool = { version = "0.1.3", default-features = false }

[features]
r2d2 = ["thrift-pool/enable-r2d2"]
bb8 = ["thrift-pool/enable-bb8"]
