[package]
name = "hbase-thrift"
version = "1.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/midnightexigent/hbase-thrift-rs"
description = "A client for HBase's Thrift Interface"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
easy-ext = "1.0.1"
thrift = "0.17.0"
thrift-pool = { version = "1.5", default-features = false, optional = true }

[features]
default = ["r2d2"]
r2d2 = ["pool", "thrift-pool/impl-r2d2"]
bb8 = ["pool", "thrift-pool/impl-bb8"]
pool = ["thrift-pool"]

[dev-dependencies]
r2d2 = "0.8"
